k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: simple-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
