k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api
spec:
  defaultBackend:
    service:
      name: simple-api
      port:
        number: 80
